--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ option(BUILD_DEPENDS
 if(BUILD_DEPENDS)
    add_subdirectory(maxflow ${CMAKE_BINARY_DIR}/maxflow)
 else()
-   link_directories(dependencies/maxflow/build/)
+   link_directories(build/maxflow/)
 endif()
 
 find_package(OpenCV REQUIRED)
@@ -63,6 +63,10 @@ if(APPLE)
   set(CMAKE_CXX_COMPILER ${LLVM_TOOLS_BINARY_DIR}/clang++)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+else()
+  find_package(OpenMP REQUIRED)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
 ################# Flags ################
